Study choice test finished

--- a/app/src/main/res/layout/study_test3.xml
+++ b/app/src/main/res/layout/study_test3.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/study_test"
+    android:id="@+id/study_test3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CC0033"
     android:orientation="vertical"
-    tools:context=".Study_test">
+    tools:context=".Study_test3">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
             android:layout_marginStart="86dp"
             android:layout_marginLeft="86dp"
             android:layout_marginRight="306dp"
-            android:text="1"
+            android:text="3"
             android:textColor="#fff"
             android:textSize="20sp" />
 
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:progress="7"/>
+        android:progress="21"/>
 
     <TextView
         android:id="@+id/question"
@@ -53,7 +53,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="40dp"
         android:padding="8dp"
-        android:text="I like to work from a computer"
+        android:text="I have great interest in the economy"
         android:textColor="#fff"
         android:textSize="20sp"
         android:layout_alignParentLeft="true" />
@@ -103,7 +103,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
+        <Button
+            android:id="@+id/Previousbutton"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="left"
+            android:text="Previous"
+            android:layout_alignParentLeft="true" />
 
         <Button
             android:id="@+id/Nextbutton"
