Added the coding quiz to the menu. It works from the homescreen.

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -26,6 +26,12 @@
 
     </item>
     <item
+        android:id= "@+id/codingquiz"
+        android:title="Code Quiz"
+        android:icon="@drawable/baseline_done_black_24dp">
+
+    </item>
+    <item
         android:id= "@+id/mysocial"
         android:title="Contact"
         android:icon="@drawable/ic_mail_black_24dp">
