--- a/app/src/main/res/layout/activity_informatica_page.xml
+++ b/app/src/main/res/layout/activity_informatica_page.xml
@@ -98,9 +98,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="119dp"
                 android:layout_marginRight="119dp"
-                android:background="#CC0033"
+                android:background="@drawable/custom_button"
                 android:text="Upcoming openday:                                                  04/04/2019"
-                android:textColor="#FFFFFF"
+                android:textColor="#CC0033"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
