--- a/app/src/main/res/layout/activity_communication_page.xml
+++ b/app/src/main/res/layout/activity_communication_page.xml
@@ -100,9 +100,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginRight="1dp"
-                android:background="#CC0033"
+                android:background="@drawable/custom_button"
                 android:text="Upcoming openday:                                                  04/04/2019"
-                android:textColor="#FFFFFF"
+                android:textColor="#CC0033"
                 android:textSize="21sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView11"
                 app:layout_constraintHorizontal_bias="0.0"
