--- a/app/src/main/res/layout/activity_tech_informatica_page.xml
+++ b/app/src/main/res/layout/activity_tech_informatica_page.xml
@@ -85,9 +85,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="120dp"
                 android:layout_marginRight="120dp"
-                android:background="#CC0033"
+                android:background="@drawable/custom_button"
                 android:text="Upcoming openday:                                                  04/04/2019"
-                android:textColor="#FFFFFF"
+                android:textColor="#CC0033"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
