--- a/app/src/main/res/layout/coding_quiz_info.xml
+++ b/app/src/main/res/layout/coding_quiz_info.xml
@@ -90,7 +90,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView10"
-            app:srcCompat="@drawable/code_example" />
+            app:srcCompat="@drawable/code_example"
+            />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.NavigationView
