--- a/app/src/main/res/layout/contact_page.xml
+++ b/app/src/main/res/layout/contact_page.xml
@@ -47,7 +47,8 @@
         android:layout_marginTop="123dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="#ffffff"
+        android:background="@drawable/custom_button"
+        android:textColor="#CC0033"
         android:text="@string/Website"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.459"
@@ -63,7 +64,8 @@
         android:layout_marginTop="123dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_button"
+        android:textColor="#CC0033"
         android:text="@string/Route"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.925"
@@ -77,7 +79,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="123dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_button"
+        android:textColor="#CC0033"
         android:text="@string/Questions"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
