--- a/app/src/main/res/layout/coding_quiz.xml
+++ b/app/src/main/res/layout/coding_quiz.xml
@@ -62,16 +62,44 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:id="@+id/codeQuest"
-            android:text="... coding question..."
-            android:textColor="#000000"
-            android:layout_margin="10dp"
-            android:background="#ffffff"
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp">
+
+            <TextView
+                android:id="@+id/codeQuest"
+                android:layout_width="195dp"
+                android:layout_height="300dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="-2dp"
+                android:layout_marginRight="-2dp"
+                android:layout_toStartOf="@+id/codeQuest2"
+                android:layout_toLeftOf="@+id/codeQuest2"
+                android:background="#ffffff"
+                android:gravity="clip_vertical"
+                android:text="... coding question..."
+                android:textColor="#000000"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/codeQuest2"
+                android:layout_width="208dp"
+                android:layout_height="300dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:background="#ffffff"
+                android:gravity="clip_vertical"
+                android:text="... coding question..."
+                android:textColor="#000000"
+                android:textSize="20dp" />
+        </RelativeLayout>
+
 
         <EditText
             android:layout_width="match_parent"
