--- a/app/src/main/res/layout/cmd1.xml
+++ b/app/src/main/res/layout/cmd1.xml
@@ -67,8 +67,7 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="Exposition of    17:00 - 18:30        4th floor
-        Projects                                             WD4.202"
+                android:text="Exposition      17:00 - 18:30      4th floor   of Projects                                  WD4.202"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,8 +94,8 @@
 
             <TextView
                 android:id="@+id/infOpenDay"
-                android:layout_width="315dp"
-                android:layout_height="84dp"
+                android:layout_width="323dp"
+                android:layout_height="95dp"
                 android:layout_marginStart="87dp"
                 android:layout_marginLeft="87dp"
                 android:layout_marginTop="8dp"
@@ -115,14 +114,21 @@
                 android:id="@+id/Questions"
                 android:layout_width="147dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/QuestionText"
                 android:textColor="#CC0033"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ShareIt" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ShareIt"
+                app:layout_constraintVertical_bias="0.26" />
 
             <Button
                 android:id="@+id/route"
@@ -130,46 +136,59 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="39dp"
-                android:layout_marginEnd="73dp"
-                android:layout_marginRight="73dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/RouteText"
                 android:textColor="#CC0033"
-                app:layout_constraintEnd_toStartOf="@+id/ShareIt"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.82" />
 
             <Button
                 android:id="@+id/ShareIt"
                 android:layout_width="147dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="39dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
-                android:layout_marginBottom="12dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/ShareText"
                 android:textColor="#CC0033"
-                app:layout_constraintBottom_toTopOf="@+id/Questions"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
+                app:layout_constraintHorizontal_bias="0.88"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.82" />
 
             <Button
                 android:id="@+id/AddToCalender"
                 android:layout_width="147dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="73dp"
-                android:layout_marginRight="73dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/CalendarText"
                 android:textColor="#CC0033"
-                app:layout_constraintEnd_toStartOf="@+id/Questions"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.03"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/route" />
+                app:layout_constraintTop_toBottomOf="@+id/route"
+                app:layout_constraintVertical_bias="0.25" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.NavigationView
