--- a/app/src/main/res/layout/cmd3.xml
+++ b/app/src/main/res/layout/cmd3.xml
@@ -67,8 +67,7 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="Exposition of    17:00 - 18:30        4th floor
-        Projects                                             WD4.202"
+                android:text="Exposition      17:00 - 18:30      4th floor   of Projects                                  WD4.202"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,8 +94,8 @@
 
             <TextView
                 android:id="@+id/infOpenDay"
-                android:layout_width="315dp"
-                android:layout_height="84dp"
+                android:layout_width="319dp"
+                android:layout_height="97dp"
                 android:layout_marginStart="87dp"
                 android:layout_marginLeft="87dp"
                 android:layout_marginTop="8dp"
