--- a/app/src/main/res/layout/creativemgt1.xml
+++ b/app/src/main/res/layout/creativemgt1.xml
@@ -67,8 +67,7 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="Exposition of    17:00 - 18:30        4th floor
-        Projects                                             WD4.202"
+                android:text="Exposition      17:00 - 18:30      4th floor   of Projects                                  WD4.202"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
