--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -39,9 +39,8 @@
     </item>
     <item
         android:id="@+id/contactpage"
-        android:title="ContactNew"
         android:icon="@drawable/ic_mail_black_24dp"
-        ></item>
+        android:title="Contact"></item>
 
 
 
