--- a/app/src/main/res/layout/cmd1.xml
+++ b/app/src/main/res/layout/cmd1.xml
@@ -131,7 +131,7 @@
                 app:layout_constraintVertical_bias="0.26" />
 
             <Button
-                android:id="@+id/route"
+                android:id="@+id/floor_plans"
                 android:layout_width="147dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="16dp"
@@ -187,7 +187,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.03"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/route"
+                app:layout_constraintTop_toBottomOf="@+id/floor_plans"
                 app:layout_constraintVertical_bias="0.25" />
         </android.support.constraint.ConstraintLayout>
 
