--- a/app/src/main/res/layout/techinform1.xml
+++ b/app/src/main/res/layout/techinform1.xml
@@ -124,7 +124,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/ShareIt" />
 
             <Button
-                android:id="@+id/route"
+                android:id="@+id/floor_plans"
                 android:layout_width="147dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="16dp"
@@ -168,7 +168,7 @@
                 android:textColor="#CC0033"
                 app:layout_constraintEnd_toStartOf="@+id/Questions"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/route" />
+                app:layout_constraintTop_toBottomOf="@+id/floor_plans" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.NavigationView
