--- a/app/src/main/res/layout/activity_cmdpage.xml
+++ b/app/src/main/res/layout/activity_cmdpage.xml
@@ -24,19 +24,17 @@
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="382dp"
+                android:layout_height="51dp"
                 android:layout_below="@+id/lijn2"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginEnd="38dp"
                 android:layout_marginRight="38dp"
-                android:text="Creative technologists invent and develop innovative products, where the user is central. You differentiate yourself from other programmers by your level of creativity and your knowledge and sense of interaction between devices and people
-"
+                android:text="Studying with us often looks different. As a designer you do not sit in the traditional school desks. We work together in the studio for real clients."
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.116"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -76,15 +74,15 @@
 
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="374dp"
-                android:layout_height="149dp"
+                android:layout_width="376dp"
+                android:layout_height="123dp"
                 android:layout_below="@id/lijn3"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginEnd="6dp"
                 android:layout_marginRight="6dp"
-                android:text="As a CMGT person you are a developer of interactive digital products: you develop web and mobile applications and you know the basics of developing games. However, the boundaries between these digital products and the physical world are becoming increasingly blurred and faster. You are therefore not trained as a specialist in 1 specific programming language or platform, but as a flexible programmer who can quickly master the possibilities of a new language or platform (smartphone, game console, Internet of Things)."
+                android:text="The first-year students now focus on the elderly who experience physical or psychological health problems to a greater or lesser extent and need informal care. The client is looking for smart, new technological applications that the elderly, with the help of informal caregivers, can make living at home longer."
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toStartOf="@+id/textView11"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -122,10 +120,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="23dp"
-                android:text="The Communication course teaches you to touch, connect and move people as a smart connector.
-
-Curious? Stories from the training can be found on our platform
-www.smartconnecting.nl."
+                android:text="The CMD course challenges you to use your knowledge, creativity and design talent for interactive products and services that make the life and environment of users more pleasant or even improve.."
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -140,6 +135,7 @@ www.smartconnecting.nl."
                 android:layout_below="@+id/textView8"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="91dp"
                 android:layout_marginRight="91dp"
                 android:background="@android:color/white"
