--- a/app/src/main/res/layout/cmd1.xml
+++ b/app/src/main/res/layout/cmd1.xml
@@ -113,63 +113,98 @@
 
             <Button
                 android:id="@+id/Questions"
-                android:layout_width="147dp"
+                android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/QuestionText"
                 android:textColor="#CC0033"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ShareIt" />
+                app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
 
             <Button
                 android:id="@+id/route"
-                android:layout_width="147dp"
+                android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="39dp"
-                android:layout_marginEnd="73dp"
-                android:layout_marginRight="73dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/RouteText"
                 android:textColor="#CC0033"
-                app:layout_constraintEnd_toStartOf="@+id/ShareIt"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
 
             <Button
-                android:id="@+id/ShareIt"
-                android:layout_width="147dp"
+                android:id="@+id/email"
+                android:layout_width="90dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="39dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
-                android:layout_marginBottom="12dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="28dp"
                 android:background="@drawable/custom_button"
-                android:text="@string/ShareText"
+                android:text="Email"
                 android:textColor="#CC0033"
-                app:layout_constraintBottom_toTopOf="@+id/Questions"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/AddToCalender" />
+
+            <Button
+                android:id="@+id/whatsapp"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="28dp"
+                android:background="@drawable/custom_button"
+                android:text="Whatsapp"
+                android:textColor="#CC0033"
+                app:layout_constraintStart_toEndOf="@+id/email"
+                app:layout_constraintTop_toBottomOf="@+id/AddToCalender" />
+
+            <Button
+                android:id="@+id/twitter"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="28dp"
+                android:background="@drawable/custom_button"
+                android:text="Twitter"
+                android:textColor="#CC0033"
+                app:layout_constraintStart_toEndOf="@+id/facebook"
+                app:layout_constraintTop_toBottomOf="@+id/AddToCalender" />
+
+            <Button
+                android:id="@+id/facebook"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="28dp"
+                android:background="@drawable/custom_button"
+                android:text="Facebook"
+                android:textColor="#CC0033"
+                app:layout_constraintStart_toEndOf="@+id/whatsapp"
+                app:layout_constraintTop_toBottomOf="@+id/AddToCalender" />
 
             <Button
                 android:id="@+id/AddToCalender"
-                android:layout_width="147dp"
+                android:layout_width="120dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="73dp"
-                android:layout_marginRight="73dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/CalendarText"
                 android:textColor="#CC0033"
                 app:layout_constraintEnd_toStartOf="@+id/Questions"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/route" />
+                app:layout_constraintHorizontal_bias="0.473"
+                app:layout_constraintStart_toEndOf="@+id/route"
+                app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.NavigationView
