--- a/app/src/main/res/layout/activity_institute_page.xml
+++ b/app/src/main/res/layout/activity_institute_page.xml
@@ -6,20 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".InstitutePage"
     android:background="#CC0033">
+
     <android.support.v4.widget.DrawerLayout
+        android:id="@+id/dl"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".Homescreen"
-        android:orientation="vertical"
-        android:id="@+id/dl">
+        tools:context=".Homescreen">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/Studybutton"
+                android:layout_width="147dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/custom_button"
+                android:text="studies"
+                android:textColor="#CC0033"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.38"
+                app:layout_constraintStart_toEndOf="@+id/website"
+                app:layout_constraintTop_toBottomOf="@+id/floor_plans" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:text="Institute"
+                android:textColor="#FFFFFF"
+                android:textSize="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+
+                />
 
 
             <TextView
@@ -40,41 +81,38 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="366dp"
-        android:layout_height="132dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/institutefoto" />
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="325dp"
+                android:layout_height="104dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/institutefoto" />
 
             <TextView
                 android:id="@+id/geninfo"
-                android:layout_width="362dp"
-                android:layout_height="168dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Inside CMI we have the studies Communication(CO),Communication and Multimedia Design (CMD), Creative Media and Game Technologies (CMGT, Technical Informatica (TI) and Informatica (INF). The 'Stadslab' is also established in the building."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="With its courses in Communication, Informatics, Technical Informatics, Creative Media and Game Technologies and Communication and Multimedia Design, the Institute for Communication, Media and Information Technology (CMI) has no fewer than 3000 students who make a valuable contribution to the unlimited world of communication, media and IT."
                 android:textColor="#ffffff"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toTopOf="@+id/textView2"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.476"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4"
-                app:layout_constraintVertical_bias="0.0" />
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4"
-                app:layout_constraintVertical_bias="0.183" />
+                app:layout_constraintTop_toBottomOf="@+id/textView20" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            app:layout_constraintVertical_bias="0.183" />
 
             <Button
                 android:id="@+id/opening_hours"
@@ -91,10 +129,10 @@
                 android:textColor="#CC0033"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.13"
+                app:layout_constraintHorizontal_bias="0.12"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.58000004" /><![CDATA[
+                app:layout_constraintVertical_bias="0.696" /><![CDATA[
                 app:layout_constraintHorizontal_bias="0.076"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -117,47 +155,35 @@
                 android:textColor="#CC0033"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.88"
+                app:layout_constraintHorizontal_bias="0.842"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.58000004" />
+                app:layout_constraintVertical_bias="0.694" />
 
             <Button
                 android:id="@+id/website"
-                android:layout_width="298dp"
-                android:layout_height="56dp"
+                android:layout_width="147dp"
+                android:layout_height="50dp"
                 android:background="@drawable/custom_button"
                 android:text="Contact"
                 android:textColor="#CC0033"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.507"
+                app:layout_constraintHorizontal_bias="0.143"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/opening_hours"
-                app:layout_constraintVertical_bias="0.461" /><![CDATA[
+                app:layout_constraintVertical_bias="0.163" /><![CDATA[
 
-
-            android:text="Institute"
-                android:textColor="#FFFFFF"
-                android:textSize="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-"
-                tools:layout_editor_absoluteX="168dp"
-                tools:layout_editor_absoluteY="140dp" />
-
-        ]]>
+                       ]]>
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/nav_view"
-            android:layout_gravity= "start"
+            android:layout_gravity="start"
             app:headerLayout="@layout/navigation_header"
             app:menu="@menu/navigation_menu">
-
 
 
         </android.support.design.widget.NavigationView>
