Calling button works

--- a/app/src/main/res/layout/contact_page.xml
+++ b/app/src/main/res/layout/contact_page.xml
@@ -124,22 +124,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
-    <Button
-        android:id="@+id/bellen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Phone number 0623287137"
-        android:textSize="24dp"
-        android:background="#CC0033"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+            <Button
+                android:id="@+id/bellen"
+                android:layout_width="147"
+                android:layout_height="50"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="27dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/custom_button"
+                android:text="Call 0623287137"
+                android:textColor="#CC0033"
+                android:textSize="14dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView19" />
         </android.support.constraint.ConstraintLayout>
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
