alles klopt op telefoon

--- a/app/src/main/res/layout/activity_cmdpage.xml
+++ b/app/src/main/res/layout/activity_cmdpage.xml
@@ -24,9 +24,10 @@
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="382dp"
-                android:layout_height="51dp"
+                android:layout_width="381dp"
+                android:layout_height="58dp"
                 android:layout_below="@+id/lijn2"
+                android:gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="38dp"
@@ -58,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageView2"
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="88dp"
                 android:layout_marginLeft="88dp"
@@ -77,6 +79,7 @@
                 android:layout_width="393dp"
                 android:layout_height="196dp"
                 android:layout_below="@id/lijn3"
+                android:gravity="center"
                 android:layout_marginStart="7dp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="14dp"
@@ -114,6 +117,7 @@
                 android:layout_width="390dp"
                 android:layout_height="79dp"
                 android:layout_below="@+id/lijn5"
+                android:gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="8dp"
