--- a/app/src/main/res/layout/activity_cmgtpage.xml
+++ b/app/src/main/res/layout/activity_cmgtpage.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lijn2"
+                android:gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="8dp"
@@ -60,6 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageView2"
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="88dp"
                 android:layout_marginLeft="88dp"
@@ -79,6 +81,7 @@
                 android:layout_width="389dp"
                 android:layout_height="183dp"
                 android:layout_below="@id/lijn3"
+                android:gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="8dp"
@@ -116,6 +119,7 @@
                 android:layout_width="395dp"
                 android:layout_height="111dp"
                 android:layout_below="@+id/lijn5"
+                android:gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="8dp"
