--- a/app/src/main/res/layout/activity_informatica_page.xml
+++ b/app/src/main/res/layout/activity_informatica_page.xml
@@ -28,6 +28,7 @@
                 android:layout_width="368dp"
                 android:layout_height="80dp"
                 android:layout_below="@+id/lijn9"
+                android:gravity="center"
                 android:layout_marginEnd="43dp"
                 android:layout_marginRight="43dp"
                 android:text="We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems"
@@ -56,6 +57,7 @@
                 android:layout_width="150dp"
                 android:layout_height="42dp"
                 android:layout_below="@+id/imageView2"
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="117dp"
                 android:layout_marginLeft="117dp"
@@ -76,6 +78,7 @@
                 android:layout_width="398dp"
                 android:layout_height="203dp"
                 android:layout_below="@+id/lijn6"
+                android:gravity="center"
                 android:layout_marginStart="3dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginEnd="16dp"
@@ -112,7 +115,7 @@
                 android:layout_width="384dp"
                 android:layout_height="59dp"
                 android:layout_below="@+id/lijn8"
-
+                android:gravity="center"
                 android:layout_marginStart="3dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginEnd="24dp"
