--- a/app/src/main/res/layout/activity_communication_page.xml
+++ b/app/src/main/res/layout/activity_communication_page.xml
@@ -27,6 +27,7 @@
                 android:layout_width="368dp"
                 android:layout_height="80dp"
                 android:layout_below="@+id/lijn2"
+                android:gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="8dp"
@@ -58,6 +59,7 @@
                 android:layout_width="254dp"
                 android:layout_height="47dp"
                 android:layout_below="@+id/imageView2"
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="88dp"
                 android:layout_marginLeft="88dp"
@@ -77,6 +79,7 @@
                 android:layout_width="374dp"
                 android:layout_height="149dp"
                 android:layout_below="@id/lijn3"
+                android:gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="8dp"
@@ -114,6 +117,7 @@
                 android:layout_width="390dp"
                 android:layout_height="79dp"
                 android:layout_below="@+id/lijn5"
+                android:gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="8dp"
