--- a/app/src/main/res/layout/activity_tech_informatica_page.xml
+++ b/app/src/main/res/layout/activity_tech_informatica_page.xml
@@ -28,6 +28,7 @@
                 android:layout_width="368dp"
                 android:layout_height="80dp"
                 android:layout_below="@+id/lijnn"
+                android:gravity="center"
                 android:layout_marginStart="1dp"
                 android:layout_marginLeft="1dp"
                 android:layout_marginEnd="42dp"
@@ -44,6 +45,7 @@
                 android:layout_width="239dp"
                 android:layout_height="38dp"
                 android:layout_below="@+id/imageView5"
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="86dp"
                 android:layout_marginLeft="86dp"
@@ -60,14 +62,14 @@
 
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="404dp"
-                android:layout_height="209dp"
+                android:layout_width="384dp"
+                android:layout_height="219dp"
                 android:layout_below="@+id/lijnview1"
-
                 android:layout_marginStart="1dp"
                 android:layout_marginLeft="1dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
+                android:gravity="center"
                 android:text="Software can be found all around us. You are the specialist in creating complex software systems that work quickly, efficiently and securely. You can think of developing a app, but also analyzing large amounts of data. When developing these systems you come into contact with different languages. In the first year you learn how to program in Python and advanced programming languages ​​such as Java / C #. From the second year on, you choose which programming language you want to use. In addition to programming and developing various applications, you also learn to collaborate."
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +100,7 @@
                 android:layout_width="388dp"
                 android:layout_height="78dp"
                 android:layout_below="@+id/view3"
+                android:gravity="center"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="23dp"
                 android:layout_marginRight="23dp"
